; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_tty.c_tty_read_into_buf.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_tty.c_tty_read_into_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i64, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tty*, i8*, i64)* @tty_read_into_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tty_read_into_buf(%struct.tty* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.tty*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.tty* %0, %struct.tty** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.tty*, %struct.tty** %4, align 8
  %9 = getelementptr inbounds %struct.tty, %struct.tty* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ule i64 %7, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i8*, i8** %5, align 8
  %15 = load %struct.tty*, %struct.tty** %4, align 8
  %16 = getelementptr inbounds %struct.tty, %struct.tty* %15, i32 0, i32 3
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call i32 @memcpy(i8* %14, i64 %17, i64 %18)
  %20 = load i64, i64* %6, align 8
  %21 = load %struct.tty*, %struct.tty** %4, align 8
  %22 = getelementptr inbounds %struct.tty, %struct.tty* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = sub i64 %23, %20
  store i64 %24, i64* %22, align 8
  %25 = load %struct.tty*, %struct.tty** %4, align 8
  %26 = getelementptr inbounds %struct.tty, %struct.tty* %25, i32 0, i32 3
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.tty*, %struct.tty** %4, align 8
  %29 = getelementptr inbounds %struct.tty, %struct.tty* %28, i32 0, i32 3
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* %6, align 8
  %32 = add i64 %30, %31
  %33 = load %struct.tty*, %struct.tty** %4, align 8
  %34 = getelementptr inbounds %struct.tty, %struct.tty* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = call i32 @memmove(i64 %27, i64 %32, i64 %35)
  %37 = load %struct.tty*, %struct.tty** %4, align 8
  %38 = getelementptr inbounds %struct.tty, %struct.tty* %37, i32 0, i32 2
  %39 = load i64, i64* %38, align 8
  %40 = load %struct.tty*, %struct.tty** %4, align 8
  %41 = getelementptr inbounds %struct.tty, %struct.tty* %40, i32 0, i32 2
  %42 = load i64, i64* %41, align 8
  %43 = load i64, i64* %6, align 8
  %44 = add i64 %42, %43
  %45 = load %struct.tty*, %struct.tty** %4, align 8
  %46 = getelementptr inbounds %struct.tty, %struct.tty* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = call i32 @memmove(i64 %39, i64 %44, i64 %47)
  %49 = load %struct.tty*, %struct.tty** %4, align 8
  %50 = getelementptr inbounds %struct.tty, %struct.tty* %49, i32 0, i32 1
  %51 = call i32 @notify(i32* %50)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memcpy(i8*, i64, i64) #1

declare dso_local i32 @memmove(i64, i64, i64) #1

declare dso_local i32 @notify(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
